--- a/auth-server/serverless.yml
+++ b/auth-server/serverless.yml
@@ -1,12 +1,50 @@
-# "org" ensures this Service is used with the correct Serverless Framework Access Key.
 org: dbreazi
-# "service" is the name of this project. This will also be added to your AWS resource names.
 service: auth-server
 
 provider:
   name: aws
   runtime: nodejs20.x
+  region: us-east-1
+  timeout: 30 # optional: extend the timeout for Lambda functions
+  environment:
+    CLIENT_ID: ${file(config.json):CLIENT_ID}
+    CLIENT_SECRET: ${file(config.json):CLIENT_SECRET}
+    CALENDAR_ID: ${file(config.json):CALENDAR_ID}
+
+  # Ensure your Lambda function has the correct execution role
+  role: arn:aws:iam::484907522399:role/auth-server-dev-us-east-1-lambdaRole
 
 functions:
   hello:
     handler: handler.hello
+    events:
+      - http:
+          path: api/hello
+          method: get
+
+  getAuthURL:
+    handler: handler.getAuthURL
+    events:
+      - http:
+          path: api/get-auth-url
+          method: get
+
+  getAccessToken:
+    handler: handler.getAccessToken
+    events:
+      - http:
+          path: api/token/{code}
+          method: get
+
+  getCalendarEvents:
+    handler: handler.getCalendarEvents
+    events:
+      - http:
+          path: api/get-events/{access_token}
+          method: get
+
+package:
+  include:
+    - node_modules/**
+    - handler.js
+    - config.json
